<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="round_to_nearest">Round to nearest dollar</string>
    <string name="bill_amount_text">Bill Amount ($)</string>
    <string name="button_calculate">Calculate</string>
    <string name="text_tip">&quot;Tip: $&quot;</string>
    <string name="tip_percent">12</string>

</resources>